--- a/xrf-processor/src/webparts/xrfProcessor/components/XrfProcessor.module.scss
+++ b/xrf-processor/src/webparts/xrfProcessor/components/XrfProcessor.module.scss
@@ -1,6 +1,8 @@
 @import '~@fluentui/react/dist/sass/References.scss';
 
 .xrfProcessor {
+  width: 100%;
+  box-sizing: border-box;
   overflow: hidden;
   padding: 1em;
   color: "[theme:bodyText, default: #323130]";
